fix: Resize logo and spacing

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -1,3 +1,10 @@
 .about {
   font-weight: 900;
 }
+
+.aboutLogo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
